@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-10T01:04:06Z",
+  "timestamp" : "2023-07-10T16:14:14Z",
   "count_outdated" : 42,
   "uniques_outdated" : 32,
-  "count" : 45,
-  "uniques" : 34,
+  "count" : 46,
+  "uniques" : 35,
   "clones" : [
     {
       "timestamp": "2023-07-02T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2023-07-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
